--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,7 @@
 # Educational Book Subscription System - Environment Configuration
 
-# Database Configuration
-DATABASE_URL=postgresql://user:password@localhost:5432/bookapp_dev
-DB_HOST=localhost
-DB_PORT=5432
-DB_SSL_REQUIRE=true
-DB_NAME=bookapp_dev
-DB_USER=postgres
-DB_PASS=your_password_here
+# Database Configuration (Neon PostgreSQL)
+DATABASE_URL=postgresql://user:password@host.neon.tech/dbname?sslmode=require
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-in-production-min-32-chars
