--- a/package.json
+++ b/package.json
@@ -14,17 +14,26 @@
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix"
   },
-  "keywords": ["education", "books", "subscription", "nodejs", "express", "postgresql"],
+  "keywords": [
+    "education",
+    "books",
+    "subscription",
+    "nodejs",
+    "express",
+    "postgresql"
+  ],
   "author": "Nikhil",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.946.0",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "express-rate-limit": "^6.8.1",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "joi": "^17.9.2",
@@ -35,14 +44,13 @@
     "pg-hstore": "^2.3.4",
     "razorpay": "^2.9.6",
     "sequelize": "^6.32.1",
-    "uuid": "^9.0.0",
-    "express-rate-limit": "^6.8.1"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
+    "eslint": "^8.45.0",
     "jest": "^29.6.2",
-    "supertest": "^6.3.3",
-    "eslint": "^8.45.0"
+    "nodemon": "^3.1.10",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=16.0.0",
