--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "eslint": "^8.45.0",
+    "fast-check": "^4.5.3",
     "jest": "^29.6.2",
     "nodemon": "^3.1.10",
     "supertest": "^6.3.3"
